# semantic-knowledge-explorer

./: NEXT_STEPS.md  README.md  main.py  pyproject.toml
lancedb_data/conceptual_embeddings.lance/_transactions/: 0-d00625fa-877f-41e8-b549-dab60c9dd49f.txn  1-e563e2f1-238d-4132-a667-73fa108a3f6c.txn
lancedb_data/conceptual_embeddings.lance/_versions/: 1.manifest  2.manifest
lancedb_data/conceptual_embeddings.lance/data/: 0d020642-945a-4b20-b4a1-cf3bafa340a8.lance
semantic_knowledge_explorer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
